--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,16 @@
 body{
-    /* margin: 0; */
+    margin: 0 auto;
     font-family: sans-serif;
 }
 
 header{
-    margin: 10px;
-    height: 75px;
+    /* margin-left: 10px;
+    margin-right: 10px; */
+    width: 100%;
+    height: 65px;
     background-color: #299cdf;
     color: white;
+    position: fixed;
 }
 
 .logo{
@@ -27,7 +30,7 @@ nav{
 
 nav ul{
     list-style: none;
-    padding-top: 15px;
+    padding-top: 10px;
 }
 
 nav ul li{
@@ -63,7 +66,6 @@ form{
 }
 
 .product-img{
-    border-radius: 20px;
     margin: 10px;
     text-align: center;
 }
@@ -84,7 +86,7 @@ form{
 
 footer{
     text-align: center;
-    margin: 10px;
+    /* margin: 10px; */
     height: 50px;
     background-color: #299cdf;
     color: white;
